# systemg

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DEBUGGING.md  Dockerfile.builder  LICENSE  README.md  bugs.txt  config.yaml  docker-compose.yml  index.sh  rust-toolchain.toml  rustfmt.toml  use-case-bugs.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yaml
ci/: Dockerfile  Dockerfile.aarch64-unknown-linux-gnu-clang  Dockerfile.aarch64-unknown-linux-musl-clang  Dockerfile.debian-x86_64-unknown-linux-gnu-clang  Dockerfile.x86_64-unknown-linux-gnu-clang  Dockerfile.x86_64-unknown-linux-musl-clang  build-images.bash  extract_version.py  sync_plugin_version.py
docs/: .gitignore  README.md  docs.json  docusaurus.config.ts  index.mdx  installation.mdx  intro.mdx  llms-full.txt  llms.txt  package-lock.json  package.json  philosophy.mdx  quickstart.mdx  security.mdx
docs/blog/: 2025-05-05-sysg-intro.md  2025-11-25-systemg-v1-feature-complete.md  authors.yml
docs/docs/: configuration.md  cron.md  getting-started.md  how-it-works.md  installation.md  intro.md  philosophy.md  privileged-mode.md  quickstart.md  security.md  state.md  supervisor-logs.md  usage.md  webhooks.md
docs/docs/examples/: crud.md  generative-ui.md  hello-world.md  index.md  meta-agents.md  multi-service.md  orchestrator.md  units.md
docs/docs/how-it-works/: configuration.md  cron.md  index.md  logs.md  privileged-mode.md  state.md  webhooks.md
docs/docs/usage/: inspect.md  logs.md  purge.md  restart.md  spawn.md  start-vs-spawn.md  start.md  status.md  stop.md  usage.md
docs/examples/: crud.mdx  hello-world.mdx  index.mdx  orchestrator.mdx  units.mdx
docs/how-it-works/: configuration.mdx  cron.mdx  dialog.mdx  index.mdx  logs.mdx  privileged-mode.mdx  projects.mdx  state.mdx  webhooks.mdx
docs/how-it-works/commands/: index.mdx  inspect.mdx  logs.mdx  migrate.mdx  purge.mdx  restart.mdx  spawn.mdx  start-vs-spawn.mdx  start.mdx  status.mdx  stop.mdx  validate.mdx
docs/how-it-works/dialog/: codes.mdx  index.mdx
docs/installation/: upgrading.mdx
docs/integrations/: claude-code.mdx
docs/src/css/: custom.css
docs/src/pages/: index.tsx
examples/: system-mode.yaml
examples/crud/: .env.example  README.md  crud.sysg.yaml  main.py  package.json  pyproject.toml  server.js  test_api.py
examples/crud/scripts/: backup-database.sh
examples/crud/tests/: api.test.js
examples/gen-ui/: .env.example  .gitignore  INSTRUCTIONS.md  SYSTEMG_UI.md  agent.py  bootstrap.py  cleanup.sh  systemg.yaml
examples/gen-ui/instructions/: CORE_INFRA_DEV.md  FEATURES_DEV.md  OWNER.md  QA_DEV.md  TEAM_LEAD.md  UI_DEV.md
examples/hello-world/: README.md  hello-world.sh  hello-world.sysg.yaml
examples/meta-agents/: INSTRUCTIONS.md  README.md  RECURSIVE_INSTRUCTIONS.md  ROOT_INSTRUCTIONS.md  agent.py  systemg.yaml
examples/multi-service/: .gitignore  README.md  count_number.sh  echo_lines.sh  py_size.py  systemg.yaml
examples/orchestrator/: .gitignore  INSTRUCTIONS.md  SPEC.md  SYSTEMG_UI.md  agent.py  cleanup.sh  main.py  operator_onboarding_checklist.md  pyproject.toml  ruff.sh  systemg.yaml
examples/orchestrator/docs/: ORCHESTRATOR_SPEC.md
examples/orchestrator/heartbeat/: CORE_INFRA_DEV.md  FEATURES_DEV.md  OWNER.md
examples/orchestrator/instructions/: CORE_INFRA_DEV.md  FEATURES_DEV.md  INSTRUCTIONS.md  OWNER.md  QA_DEV.md  TASK_ASSIGNMENT_RULES.md  TEAM_LEAD.md  UI_DEV.md
examples/orchestrator/instructions/heartbeat/: QA_DEV.md  TEAM_LEAD.md  UI_DEV.md
examples/orchestrator/orchestrator/: __init__.py  cache.py  constants.py  heartbeat.py  instructions.py  llm.py  logging_utils.py  memory.py  models.py  orchestrator.py  runtime.py  version.py
examples/orchestrator/orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/orchestrator/tests/: conftest.py  test_agent_runtime.py  test_claude_live.py  test_heartbeat.py  test_instruction_parser.py  test_llm.py  test_logging_utils.py  test_main_cli.py  test_models.py  test_orchestrator.py  test_redis_store.py  test_spec_sanity.py  test_version.py
examples/orchestrator/tests/assets/: HEARTBEAT_agent-research.md  INSTRUCTIONS.md
examples/orchestrator/tests/assets/instructions/: agent-research.md
examples/orchestrator/tests/assets/instructions/heartbeat/: agent-research.md
examples/units/: README.md
reports/: 2026-06-11.md  2026-07-13.md  CVE.md
scripts/: INSTALL.md  audit.sh  check-sg-links.sh  commit-check.sh  fgpty.py  index.sh  install-systemg.sh  install.sh  live-matrix-test.sh  run_docker_tests.sh  test-local.sh  upload-install.sh  version-bump.sh
skills/systemg/: SKILL.md
src/: charting.rs  cli.rs  config.rs  constants.rs  cron.rs  daemon.rs  diag.rs  error.rs  ipc.rs  lib.rs  logs.rs  opslot.rs  privilege.rs  reconcile.rs  runtime.rs  selector.rs  spawn.rs  state_store.rs  status.rs  supervisor.rs  test_utils.rs  upgrade.rs  validate.rs  xml.rs
src/charting/: mod.rs  rasciigraph.rs
src/config/: mod.rs  supervisor.rs
src/inspect/: diagnostics.rs  mod.rs  plan.rs
src/logs_cmd/: diagnostics.rs  mod.rs  plan.rs
src/metrics/: mod.rs
src/purge/: mod.rs  plan.rs
src/restart/: mod.rs  plan.rs  reconcile.rs
src/start/: boot.rs  mod.rs  outcome.rs  plan.rs  render.rs
src/status/: diagnostics.rs  mod.rs  plan.rs
src/stop/: diagnostics.rs  mod.rs  plan.rs
tests/: Dockerfile.kernel  Dockerfile.kernel.ci  Dockerfile.user.ci  docs_config_parse.rs  integration.rs
tests/docker/kernel/: Dockerfile  Dockerfile.ci  run_kernel_tests.sh
tests/docker/usecase/: lib.sh  (+3 more)
tests/integration/: cli.rs  cron.rs  cron_pid_race.rs  deployment.rs  hooks.rs  logs.rs  pid_tracking.rs  process.rs  service_control.rs  service_control_regression.rs  status.rs  supervisor.rs
ui/: INSTRUCTIONS.md  SYSTEMG_UI.md  cleanup.sh  systemg.yaml
ui/instructions/: CORE_INFRA_DEV_INSTRUCTIONS.md  DEPENDENCY_CHAIN.md  FEATURES_DEV_INSTRUCTIONS.md  OWNER.md  QA_DEV_INSTRUCTIONS.md  ROOT_INSTRUCTIONS.md  TEAM_LEAD.md  UI_DEV_INSTRUCTIONS.md
ui/snapshots/: core_infra_dev.md
(+423 files in other folders)
