[package]
name = "systemg"
version = "0.12.0"
edition = "2024"
license = "MIT"
description = "A simple process manager."
rust-version = "1.90.0"

[package.metadata.docs.rs]
features = []

[[bin]]
name = "sysg"
path = "src/bin/main.rs"

[features]
linux = []
macos = []

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
clap = { version = "4.0", features = ["derive"] }
colored = "3.0"
cron = "0.12"
ctrlc = "3.4"
libc = "0.2.170"
nix = { version = "0.29", features = ["process", "signal"] }
regex = "1.7"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
sysinfo = { version = "0.33" }
tempfile = "3.14.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }

[dev-dependencies]
assert_cmd = { version = "2.0" }
predicates = { version = "2.1" }
tempfile = { version = "3.14.0" }
