[project]
name = "orchestrator"
version = "0.1.0"
description = "Example agent/orchestrator runtime for systemg"
requires-python = ">=3.10"
dependencies = [
    "redis>=5.0",
    "fakeredis>=2.22",
    "pydantic>=2.8",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["orchestrator*"]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
  "error::DeprecationWarning"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line-too-long (handled by formatter)
]
